<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Management</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname</string>
    <string name="localhost">https://10.0.3.2:8443</string>
    <string name="title_activity_video_list">VideoListActivity</string>
     <string name="details_alarm_name">Alarm Name</string>
	<string name="details_repeat_weekly">Repeat Weekly</string>
	<string name="details_sunday">Sunday</string>
	<string name="details_monday">Monday</string>
	<string name="details_tuesday">Tuesday</string>
	<string name="details_wednesday">Wednesday</string>
	<string name="details_thursday">Thursday</string>
	<string name="details_friday">Friday</string>
	<string name="details_saturday">Saturday</string>
	<string name="details_alarm_tone">Alarm Tone</string>
	<string name="details_alarm_tone_default">Select an alarm tone</string>

</resources>
