<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Main">
 <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/userName"
        android:text="admin" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="pass" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/login" />
    <EditText
        android:id="@+id/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:hint="@string/server"
        android:text="@string/localhost" />
<EditText
android:id="@+id/getName"
android:layout_width="match_parent"
android:layout_height="wrap_content" />
<EditText
android:id="@+id/getDuration"
android:layout_width="match_parent"
android:layout_height="wrap_content" />
<Button
android:id="@+id/button"
android:text="Send"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:onClick="send"/>
<Button
android:id="@+id/getListButton"
android:text="getList"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:onClick="getVideoList"/>
<ListView
android:id="@+id/videoList"
android:layout_width="fill_parent"
android:layout_height="0dp"
android:layout_weight="1"
android:scrollbars="vertical">
</ListView>
</LinearLayout>
